# xxd_embed

./: CMakeLists.txt  README.md
cmake/: EmbedFile.cmake
example/: CMakeLists.txt  example.cpp
include/: xxd.h  xxd.in
src/: xxd.cpp
